--- a/css/archive.css
+++ b/css/archive.css
@@ -1,13 +1,10 @@
+.archive-container {
+    min-height: 100vh;
+}
 .archive-header {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+    justify-content: center;
 }
 .archive-title {
-    font-size: 2rem;
-    width: fit-content; /* This will make the title only as wide as its content */
-}
-.archive-permalink { /* The excerpt ... at the end of 55 words, located in  archive search results */
-    text-decoration: underline;
+
 }
