--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,9 @@
-
 h1 {
     font-size: 4.4rem;
 }
 .site-container {  /* Limit page size for white space to focus on content for reader */
     width: 1366px;  
-
+    border: 1px green solid;
 } 
  
 .site-header { /* header area with which includes title/ and navbar */
