--- a/css/page.css
+++ b/css/page.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    width: 1366px;
+/* 
+    width: 1366px; */
     letter-spacing: 2px;
     min-height: 75vh;
 }
