--- a/css/header.css
+++ b/css/header.css
@@ -28,7 +28,6 @@ h1 {
 .site-description { /* The description below title */
     color: rgb(68, 68, 68);
     font-size: 0.8rem;
-    
 }
 .site-navigation { 
     display: flex;
@@ -45,20 +44,24 @@ h1 {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    padding: 0.5rem;
+    height: 100%;
     margin: 0;
+    padding: 0;
 }
 .site-nav-list li {
     text-decoration: none; 
     list-style: none;
     color: inherit;
-    padding: 0.5rem;
     margin: 0;
+    padding: 0;  
 }
-.site-nav-list li a{
+.site-nav-list li a {
+    display: block;  
     text-decoration: none; 
     list-style: none;
     color: inherit;
+    margin: 0;
+    padding: 1rem;  
 }
 .site-nav-list li:hover {
     background-color: #f0f0f0;
@@ -70,7 +73,6 @@ h1 {
 .site-navigationul li a:hover { /* Dropdown menu on hover of a li */
     border-bottom: 1px solid #f0f0f0; 
     box-shadow: inset 0 0 12px rgba(0,0,0,5%); 
- 
 } 
 .sub-menu { /* Layout of dropdown menu for navbar */
     display: none;
@@ -132,6 +134,7 @@ h1 {
         justify-content: center;
         align-items: center;
         width: 100%;
+
     }
     .site-nav-list {
         display: none;
@@ -141,7 +144,8 @@ h1 {
     } 
     .hamburger-menu {
         display: flex;
-        padding: 0.5rem;
+        padding: 0.75rem;
+        align-self: flex-end;
     }
     .site-nav-list li {
         margin: 0;
@@ -157,7 +161,6 @@ h1 {
         height: 100%;
     }
 }
-
 @media (max-width: 1024px) {
     .site-nav-list li {
         padding: 0.5rem;
