--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,6 @@
 .site-footer {
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 100%;
     height: 15rem;
     border-top: 1px solid #ccc;
@@ -16,11 +15,12 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 75%;
+    width: 900px;
+
 }
 .footer-menu li {
-    padding: 0.25rem;
     list-style: none;
+    padding: 0.5rem 0;
 }
 .footer-menu li:hover {
     text-decoration: underline;
