--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -30,8 +30,36 @@
 }
 .thumbnail-container {
     position: relative;
-    padding-bottom: 75%; /* 4:3 aspect ratio */
-    background-color: #f0f0f0; /* Background color while image is loading */
+    padding-bottom: 75%; 
+    background-color: #f0f0f0; 
+    overflow: hidden; /* Hide the overflow content */
+    transition: transform 0.3s ease; /* Add a smooth zooming transition effect */
+}
+
+.thumbnail-container:hover .thumbnail-img {
+    transform: scale(1.1); /* Zoom the image a bit on hover */
+}
+
+.category-label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center the label */
+    opacity: 0; /* Make it invisible initially */
+    transition: opacity 0.3s ease; /* Add a smooth fade-in transition effect */
+    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black background */
+    color: #ffffff; /* White text color */
+    padding: 0.5rem 1rem; /* Add some padding around the label */
+    border-radius: 4px; /* Rounded corners for the label */
+    z-index: 2;
+}
+
+.thumbnail-container:hover .category-label {
+    opacity: 1; /* Make it fully visible on hover */
+}
+
+.thumbnail-container:hover  .project-description {
+    opacity: 1; /* Make it fully visible on hover */
 }
 .thumbnail-img {
     position: absolute;
@@ -41,6 +69,27 @@
     height: 100%;
     object-fit: cover;
 }
+
+.project-description  {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center the label */
+    opacity: 0; /* Make it invisible initially */
+    transition: opacity 0.3s ease; /* Add a smooth fade-in transition effect */
+    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black background */
+    color: #ffffff; /* White text color */
+ 
+    border-radius: 4px; /* Rounded corners for the label */
+    z-index: 2;
+ 
+}
+
+.project-description p {
+    padding: 0.25rem;
+    margin: 0;
+}
+
 /* Small Devices (Phones, Landscape mode) */
 @media (max-width: 768px) {
     .project-grid-container {
