--- a/css/blog-layout-2.css
+++ b/css/blog-layout-2.css
@@ -2,7 +2,7 @@
     display: flex;
     min-height: 80vh;
 }
-.main-sidebar{ /* makes sidebar on right */
+.main-sidebar{
     order: 2;
     width: 20%;
 }
