--- a/css/header.css
+++ b/css/header.css
@@ -1,11 +1,10 @@
 h1 {
     font-size: 4.4rem;
 }
-.site-container {  /* Limit page size for white space to focus on content for reader */
+.site-container { 
     width: 1366px;  
 } 
- 
-.site-header { /* header area with which includes title/ and navbar */
+.site-header {
     display: flex;
     flex-direction: column;
     justify-content: center; 
@@ -14,16 +13,16 @@ h1 {
     padding: 0;
     margin: 0;
 }
-.site-title { /* title spacing */
+.site-title { 
     font-family: UnifrakturMaguntia, Georgia, serif;
     border-bottom: 1px dotted #ccc;
     margin: 1rem;
 }
-.site-title a {  /* title color/font*/
+.site-title a {  
     color: rgb(68, 68, 68); 
     text-decoration: none;
 }
-.site-description { /* The description below title */
+.site-description {
     color: rgb(68, 68, 68);
     font-size: 0.8rem;
 }
@@ -66,15 +65,15 @@ h1 {
 .site-nav-list li:hover {
     background-color: #f0f0f0;
 } 
-.site-navigation ul li:hover > .sub-menu { /* Dropdown menu on hover of a li */
+.site-navigation ul li:hover > .sub-menu {
     display: flex;
     border-bottom: 1px solid #f0f0f0; 
 } 
-.site-navigationul li a:hover { /* Dropdown menu on hover of a li */
+.site-navigationul li a:hover { 
     border-bottom: 1px solid #f0f0f0; 
     box-shadow: inset 0 0 12px rgba(0,0,0,5%); 
 } 
-.sub-menu { /* Layout of dropdown menu for navbar */
+.sub-menu {
     display: none;
     position: absolute;
     flex-direction: column; 
@@ -83,19 +82,19 @@ h1 {
     z-index: 2;
     font-size: 0.8rem;
 }
-.sub-menu:hover { /* Layout of dropdown menu for navbar */
+.sub-menu:hover { 
     display: flex;
     transition-delay:1.5s;
 }
-.sub-menu li{ /* Layout of dropdown menu for navbar */
+.sub-menu li{ 
     width: 100%;
     border: 1px solid #ccc;
     background: white;
 }
-.sub-menu li:hover { /* Layout of dropdown menu for navbar */
+.sub-menu li:hover { 
     cursor: pointer;
 }
-.sub-menu li a{ /* Layout of dropdown menu for navbar */
+.sub-menu li a{ 
     color: inherit;
 }
 .hamburger-menu {
@@ -111,19 +110,16 @@ h1 {
     height: 3px;
     background-color: #333;
 }
-/* Desktop styles */
+
 @media (min-width: 1025px) {
     .hamburger-menu {
         display: none;
     }
 }
 
-/* Tablets */
+
 @media (max-width: 1024px) {
-    html {
-       // font-size: 14px; /* 1rem = 14px on small screens */
-    }
-    .site-container { /* Located at bottom of header.php */
+    .site-container { 
         width: 100vw;
     }   
     .site-navigation {
@@ -163,6 +159,5 @@ h1 {
     .site-nav-list li {
         padding: 0.5rem;
     }
-    
 }
 
