--- a/css/header.css
+++ b/css/header.css
@@ -22,7 +22,7 @@ h1 {
     color: rgb(68, 68, 68); 
     text-decoration: none;
 }
-.site-description {
+.site-description { 
     color: rgb(68, 68, 68);
     font-size: 0.8rem;
 }
@@ -35,13 +35,16 @@ h1 {
     font-family: Coustard, Georgia, serif;
     width: 100%;
     color: #333;
+  /*   min-height: 40px;
+    max-height: 60px; */
+    // overflow: hidden; 
 }
 .site-nav-list {
     display: flex;
-    justify-content: space-around;
+     justify-content: space-around; 
     align-items: center;
     width: 100%;
-    height: 100%;
+/*     height: 100%; */
     margin: 0;
     padding: 0;
   
