--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 /*
-* Theme Name: Minimalistic
-* Author: Chris Timbol
-* Text Domain: minimal-text-domain
-* Author URI: http://timbol.dev
-* Description: A description of your theme
+Theme Name: Minimalistic
+Theme URI: http://your-theme-url.com
+Author: Chris Timbol
+Author URI: http://timbol.dev
+Description: A description of your theme
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: text-domain
 */
