fix theme check errors

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /*
 Theme Name: Minimalistic
-Theme URI: http://your-theme-url.com
+Theme URI: Minimalistic.local
 Author: Chris Timbol
 Author URI: http://timbol.dev
 Description: A description of your theme
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: text-domain
+Text Domain: Minimalistic
+Tested up to: 6.3
 */
