--- a/style.css
+++ b/style.css
@@ -9,4 +9,5 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: Minimalistic
 Tested up to: 6.3
+Requires PHP: 7.4
 */
