--- a/css/header.css
+++ b/css/header.css
@@ -72,7 +72,7 @@ h1 {
     display: flex;
     border-bottom: 1px solid #f0f0f0; 
 } 
-.site-navigationul li a:hover { 
+.site-navigation ul li  { 
     border-bottom: 1px solid #f0f0f0; 
     box-shadow: inset 0 0 12px rgba(0,0,0,5%); 
 } 
