--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,4 @@
-h1 {
-    font-size: 4.4rem;
-}
+
 .site-container { 
     width: 1366px;  
 } 
@@ -9,18 +7,23 @@ h1 {
     flex-direction: column;
     justify-content: center; 
     align-items: center;
-    max-width: 100%;
+    max-width: 100vw;
     padding: 0;
     margin: 0;
 }
 .site-title { 
     font-family: UnifrakturMaguntia, Georgia, serif;
     border-bottom: 1px dotted #ccc;
-    margin: 1rem;
-}
-.site-title a {  
+    display: flex;
+    justify-content: center; 
+    width: 90vw;
     color: rgb(68, 68, 68); 
-    text-decoration: none;
+    font-size: 4.4rem;
+}
+
+.site-title a {
+    color: inherit;
+
 }
 .site-description { 
     color: rgb(68, 68, 68);
@@ -34,71 +37,60 @@ h1 {
     box-shadow: inset 0 0 12px rgba(0, 0, 0, 5%); 
     font-family: Coustard, Georgia, serif;
     width: 100%;
-    color: #333;
-  /*   min-height: 40px;
-    max-height: 60px; */
-    // overflow: hidden; 
+    min-height: 16px;
 }
 .site-nav-list {
     display: flex;
-     justify-content: space-around; 
+    justify-content: space-around; 
     align-items: center;
     width: 100%;
-/*     height: 100%; */
+    padding: 0; 
     margin: 0;
-    padding: 0;
-  
 }
 .site-nav-list li {
+    display: flex;
     text-decoration: none; 
     list-style: none;
-    color: inherit;
-    margin: 0;
-    padding: 0;  
-
+    position: relative;
 }
-.site-nav-list li a {
-    display: block;  
-    text-decoration: none; 
-    list-style: none;
-    color: inherit;
+.site-nav-list li > a {
+    padding: 1rem;
     margin: 0;
-    padding: 1rem;  
 }
-.site-nav-list li:hover {
+.site-nav-list li:hover   {
     background-color: #f0f0f0;
 } 
-.site-navigation ul li:hover > .sub-menu {
-    display: flex;
-    border-bottom: 1px solid #f0f0f0; 
-} 
-.site-navigation ul li  { 
-    border-bottom: 1px solid #f0f0f0; 
-    box-shadow: inset 0 0 12px rgba(0,0,0,5%); 
-} 
+
+/* Hide sub-menus by default */
 .sub-menu {
     display: none;
-    position: absolute;
     flex-direction: column; 
+    border: 1px solid red;
+    position: absolute;
+    z-index: 2;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    top: 100%;
+    left: 0;
     padding: 0;
     margin: 0;
-    z-index: 2;
-    font-size: 0.8rem;
-}
-.sub-menu:hover { 
-    display: flex;
-    transition-delay:1.5s;
-}
-.sub-menu li{ 
-    width: 100%;
     border: 1px solid #ccc;
-    background: white;
+    background-color: #fff;
 }
-.sub-menu li:hover { 
-    cursor: pointer;
+
+/* Show sub-menu when hovering over its parent li */
+.site-nav-list  li:hover > .sub-menu {
+    display: flex;
+} 
+
+/* Position and style nested sub-menus */
+.sub-menu li {
+    position: relative;
 }
-.sub-menu li a{ 
-    color: inherit;
+
+.sub-menu .sub-menu {
+    top: 0;
+    left: 100%; /* Position to the right of the parent sub-menu */
 }
 .hamburger-menu {
     width: 2rem;
@@ -114,24 +106,36 @@ h1 {
     background-color: #333;
 }
 
+/* Styles for screens larger than 1025px */
 @media (min-width: 1025px) {
-    .hamburger-menu {
-        display: none;
-    }
 }
 
-
-@media (max-width: 1024px) {
+/* Styles for screens smaller than or equal to 1366px */
+@media (max-width: 1366px) {
     .site-container { 
         width: 100vw;
     }   
+
+}
+
+/* Styles for screens smaller than or equal to 900px */
+@media (max-width: 900px) {
+    html {
+        font-size: 14px;
+        text-align: center;
+    }
+    .site-header {
+    
+    }
     .site-navigation {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 100%;
-
+    }
+    .hamburger-menu {
+        display: none;
     }
     .site-nav-list {
         display: none;
@@ -139,28 +143,25 @@ h1 {
         padding: 0;
         margin: 0;
     } 
+
+    .site-nav-list li {
+        margin: 0;
+        padding: 1rem;
+        border-bottom: 1px solid #ccc;
+        width: 100%;  
+    }
+
+    .site-nav-list li a {
+        display: flex;
+        justify-content: center;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+
     .hamburger-menu {
         display: flex;
         padding: 0.75rem;
         align-self: flex-end;
     }
-    .site-nav-list li {
-        margin: 0;
-        padding: 0;
-        border-bottom: 1px solid #ccc;
-        width: 100%;  
-    }
-    .site-nav-list li a {
-        display: flex;
-        justify-content: center;
-        padding: 0.5rem;
-        width: 100%;
-        height: 100%;
-    }
 }
-@media (max-width: 1024px) {
-    .site-nav-list li {
-        padding: 0.5rem;
-    }
-}
-
