--- a/css/archive.css
+++ b/css/archive.css
@@ -1,5 +1,7 @@
 .archive-container {
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
 }
 .archive-header {
     display: flex;
