--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,7 @@ body {
     line-height: 1.2;
     letter-spacing: 2px;
     margin: 0.5rem;
+    padding: 1rem;
 }
 .post-header {
     display: flex;
