--- a/css/index.css
+++ b/css/index.css
@@ -27,9 +27,12 @@ body {
     letter-spacing: 2px;
     margin: 0.5rem;
     padding: 1rem;
+    min-height: 25vh;
+ 
 }
 .post-header {
     display: flex;
+
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -43,8 +46,12 @@ body {
 .post-meta a:hover {
     background: #f0f0f0;
 }
+.post-description {
+    
+}
 .continueButton {
     text-align: center;
+    
     padding: 1rem 2.5rem 0.5rem 2.5rem;
     color: #444;
     font-weight: 400;
