--- a/css/archive-layout.css
+++ b/css/archive-layout.css
@@ -2,6 +2,8 @@
     min-height: 100vh;
     display: flex;
     justify-content: center;
+    margin: 0;
+    margin-top: 4rem;
 }
 .archive-column {
     display: flex;
@@ -14,9 +16,8 @@
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid black;
-    padding: 1rem;
+    line-height: 1.4;
     margin: 0;
-    margin-top: 4rem;
 }
 .archive-list  li:hover {
     background: #ccc;
