--- a/css/archive.css
+++ b/css/archive.css
@@ -1,8 +1,10 @@
 .archive-container { 
+    margin: 0;
     margin-top: 4rem;
     min-height: 100vh;
 }
 .archive-header {
     display: flex;
     justify-content: center;
+    margin: 0;
 }
