--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 a {
     text-decoration: none;
     color: inherit;
+
 }
 h2 {
     font-size: 2rem;
@@ -13,20 +14,25 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
 }
 .blog-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 0; 
+    margin-top: 4rem;
+}
+.post-title {
+    margin: 0;
+    padding: 0;
 }
 .post-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    line-height: 1.2;
     letter-spacing: 2px;
-    margin: 0.5rem;
-    padding: 1rem;
+    margin: 0;
     min-height: 25vh;
 }
 .post-header {
