--- a/css/page.css
+++ b/css/page.css
@@ -4,8 +4,10 @@
     align-items: center;
     min-height: 75vh;
     max-width: 100%;
-    padding: 1rem;
+
     letter-spacing: 2px;
+    margin: 0;
+    margin-top: 4rem;
 }
 
 .page-header {
@@ -16,6 +18,7 @@
 
 .page-title {
     font-size: 2rem;
+    margin: 0;
 }
 
 .page-content {
