--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,11 +1,13 @@
 .portfolio-container {
     min-height: 100vh;
     max-width: 100%;
+    margin: 0;
+    margin-top: 4rem;
 }
 .portfolio-title {
     display: flex;
     justify-content: center;
-    font-size: 2rem;
+
 }
 .category-container {
     display: flex;
@@ -76,7 +78,7 @@
 }
 .project-description {
     font-size: 0.8rem;
-    width: 100%;
+    padding: 0.25rem;
 }
 .noPost {
     display: flex;
