--- a/css/blog-with-sidebar.css
+++ b/css/blog-with-sidebar.css
@@ -1,7 +1,8 @@
 .blog-container-with-sidebar {
     display: flex;
     min-height: 100vh;
-    
+    margin: 0;
+    margin-top: 4rem;
 }
 .blog-container-2 {
     width: 80%;
