--- a/css/page.css
+++ b/css/page.css
@@ -2,25 +2,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 75vh;
-    max-width: 100%;
-
-    letter-spacing: 2px;
     margin: 0;
     margin-top: 4rem;
 }
-
 .page-header {
     display: flex;
     justify-content: center;
     max-width: 100%;
 }
-
 .page-title {
-    font-size: 2rem;
     margin: 0;
+    padding: 0;
+    
 }
-
 .page-content {
     display: flex;
     flex-direction: column;
@@ -29,7 +23,6 @@
     max-width: 900px;
     overflow-wrap: break-word;
 }
-
 .page-content img, 
 .page-content iframe, 
 .page-content video {
