--- a/css/single.css
+++ b/css/single.css
@@ -1,9 +1,11 @@
 .single-container {
     width: 100%;
+    margin: 0;
+    margin-top: 4rem;
+    min-height: 100vh;
 }
 .single-article-container {
     display: flex;
     align-items: center;
     flex-direction: column;
-    min-height: 100vh;
 }
