--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@ body {
     flex-direction: column;
     align-items: center;
     letter-spacing: 2px;
-    margin: 0;
+    margin: 2rem;
     min-height: 25vh;
 }
 .post-header {
@@ -47,12 +47,13 @@ body {
     margin: 0;
     padding: 0;
     padding-bottom: 2rem;
+    
 }
 .post-meta a:hover {
     background: #f0f0f0;
 }
 .post-description {
-    
+    text-align: center;
 }
 .continueButton {
     text-align: center;
