--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 15rem;
+    height: 25vh;
     border-top: 1px solid #ccc;
     box-sizing: border-box;
     margin: 0;
@@ -10,15 +10,17 @@
 }
 .footer-menu {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row; /* Change to row for horizontal layout */
     align-items: center;
     flex-wrap: wrap;
-    width: 900px;
+    width: 100%;
+    max-width: 100%; /* Ensure it doesn't exceed the viewport width */
 }
 .footer-menu li {
-    list-style: none;
+    list-style:  none;
     padding: 0.5rem 0;
+    width: 100%;
+    flex-basis: calc(100% / 8); /* Replace number_of_columns with your desired number of columns, e.g., 4 for 4 columns */
 }
 .footer-menu li:hover {
     text-decoration: underline;
