--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@ body {
     justify-content: center;
     margin: 0; 
     margin-top: 4rem;
+    min-height: 100vh;
 }
 .post-title {
     margin: 0;
