fix index meta highlight gray

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: A description of your theme
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: Minimalistic
+Text Domain: minimalistic
 Tested up to: 6.3
 Requires PHP: 7.4
 */
