refactor spacing and comments

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Minimalistic
 Theme URI: Minimalistic.local
 Author: Chris Timbol
 Author URI: http://timbol.dev
-Description: A description of your theme
+Description:  A sleek WordPress theme, emphasizing your work. Ideal for creatives. Clean, responsive, and fast for optimal user experience.
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
