--- a/css/footer.css
+++ b/css/footer.css
@@ -5,8 +5,7 @@
     height: 25vh;
     border-top: 1px solid #ccc;
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    margin-top: 4rem;
 }
 .footer-menu {
     display: flex;
