--- a/css/archive-layout.css
+++ b/css/archive-layout.css
@@ -9,19 +9,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 .archive-column > h2 {
     display: flex;
     justify-content: center;
-    align-items: center;
     border-bottom: 1px solid black;
     line-height: 1.4;
     margin: 0;
 }
-.archive-list  li:hover {
+ .archive-list a:hover {
     background: #ccc;
     cursor: pointer;
+} 
+.archive-list li {
+    margin: 0.5rem;
+}
+.archive-list a {
+   
+    padding: 0.5rem;
 }
 li:empty { /* Get read of empty bullets */
     display: none;
