--- a/css/archive-layout.css
+++ b/css/archive-layout.css
@@ -4,11 +4,18 @@
     justify-content: center;
     margin: 0;
     margin-top: 4rem;
+    font-size: 1.2rem;
+}
+
+.column-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
 }
 .archive-column {
     display: flex;
     flex-direction: column;
-    align-items: center;
+  
 }
 .archive-column > h2 {
     display: flex;
@@ -17,10 +24,6 @@
     line-height: 1.4;
     margin: 0;
 }
- .archive-list a:hover {
-    background: #ccc;
-    cursor: pointer;
-} 
 .archive-list li {
     margin: 0.5rem;
 }
@@ -30,4 +33,10 @@
 }
 li:empty { /* Get read of empty bullets */
     display: none;
+}
+
+@media (max-width: 992px) {
+    .archive-page-container { 
+        flex-direction: column;
+    }
 }
