--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ Author: Chris Timbol
 Author URI: http://timbol.dev
 Description:  A sleek WordPress theme, emphasizing your work. Ideal for creatives. Clean, responsive, and fast for optimal user experience.
 Version: 1.0
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: minimalistic
-Tested up to: 6.3
-Requires PHP: 7.4
+Text Domain: Minimalistic
+License: GNU General Public License v3 or later
+License URI: https://www.gnu.org/licenses/gpl-3.0.en.html#license-text
+Requires PHP: 7.4 or higher
+Tested up to: 8.2.6
 */
