change text-domain to lowercase

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Chris Timbol
 Author URI: http://timbol.dev
 Description:  A sleek WordPress theme, emphasizing your work. Ideal for creatives. Clean, responsive, and fast for optimal user experience.
 Version: 1.0
-Text Domain: Minimalistic
+Text Domain: minimalistic
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-3.0.en.html#license-text
 Requires PHP: 7.4 or higher
