--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,11 @@
-
 .site-container { 
     width: 1366px;  
 } 
+
+main {
+    min-height: 100vh;
+}
+
 .site-header {
     display: flex;
     flex-direction: column;
@@ -11,20 +15,19 @@
     padding: 0;
     margin: 0;
 }
+
 .site-title { 
     font-family: UnifrakturMaguntia, Georgia, serif;
     border-bottom: 1px dotted #ccc;
     display: flex;
     justify-content: center; 
-
-padding: 1rem;
+    padding: 0;
     color: rgb(68, 68, 68); 
     font-size: 4.4rem;
 }
 
 .site-title a {
     color: inherit;
-
 }
 .site-description { 
     color: rgb(68, 68, 68);
@@ -53,6 +56,7 @@ padding: 1rem;
     text-decoration: none; 
     list-style: none;
     position: relative;
+ 
 }
 .site-nav-list li > a {
     padding: 1rem;
