reset wp_link_pages to default with no parameters

--- a/css/page.css
+++ b/css/page.css
@@ -4,6 +4,7 @@
     align-items: center;
     margin: 0;
     margin-top: 4rem;
+    font-family: "Coustard", Georgia, serif;
 }
 .page-header {
     display: flex;
