--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,7 @@ body {
     flex-direction: column;
     align-items: center;
     letter-spacing: 2px;
+
     min-height: 25vh;
 }
 .post-header {
@@ -49,18 +50,14 @@ body {
     font-size: 0.8rem;
     margin: 0;
     padding: 0;
-    padding-bottom: 2rem;
-    
 }
-.post-meta a:hover {
-    background: #f0f0f0;
-}
+
 .post-description {
     text-align: center;
+    padding: 0 1rem;
 }
 .continueButton {
     text-align: center;
-    
     padding: 1rem 2.5rem 0.5rem 2.5rem;
     color: #444;
     font-weight: 400;
@@ -68,7 +65,7 @@ body {
     letter-spacing: 2px;
 }
 .continueButton:hover {
-    background: #f0f0f0;
+
     transition: background-color 0.3s;
 }
 .pagination {
