--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,7 @@ main {
     max-width: 100vw;
     padding: 0;
     margin: 0;
+    padding: 2rem;
 }
 
 .site-title { 
@@ -22,6 +23,7 @@ main {
     display: flex;
     justify-content: center; 
     padding: 0;
+    margin: 0;
     color: rgb(68, 68, 68); 
     font-size: 4.4rem;
 }
@@ -32,6 +34,7 @@ main {
 .site-description { 
     color: rgb(68, 68, 68);
     font-size: 0.8rem;
+
 }
 .site-navigation { 
     display: flex;
