--- a/css/page.css
+++ b/css/page.css
@@ -21,7 +21,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    max-width: 900px;
+/*     max-width: 900px; */
     overflow-wrap: break-word;
 }
 .page-content img, 
