--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    justify-content: center;
+    width: 100%;
     min-height: 25vh;
 }
 .post-header {
@@ -44,18 +45,16 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 .post-meta {
-    font-size: 0.8rem;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    justify-content: center;
+    font-size: 0.9rem;
     width: 100%;
-    
-}
 
+}
 .post-description {
-    text-align: center;
-    padding: 0 1rem;
 }
 .continueButton {
     text-align: center;
