--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ body {
 }
 .blog-container {
     display: flex;
+    width: 100%;
     flex-direction: column;
     margin: 0; 
     margin-top: 4rem;
