--- a/css/footer.css
+++ b/css/footer.css
@@ -1,25 +1,43 @@
 .site-footer {
-
     width: 100%;
-    height: 25vh;
+    height: auto; /* Adjusted to auto to fit content */
     border-top: 1px solid #ccc;
     box-sizing: border-box;
     margin-top: 4rem;
+    padding: 1rem 0; 
 }
+
 .footer-menu {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 100%;
-    max-width: 100%; /* Ensure it doesn't exceed the viewport width */
+    max-width: 1300px;
+    margin: 0 auto; /* Center the menu */
 }
+
 .footer-menu li {
-    list-style:  none;
-    padding: 0.5rem 0;
+    list-style: none;
+    padding: 0.5rem;
     width: 100%;
-    flex-basis: calc(100% / 8); /* Replace number_of_columns with your desired number of columns, e.g., 4 for 4 columns */
+    flex-basis: 100%; /* Default to full width on small screens */
 }
+
+/* For medium screens and up */
+@media (min-width: 768px) {
+    .footer-menu li {
+        flex-basis: 50%; /* 2 columns for medium screens */
+    }
+}
+
+/* For large screens and up */
+@media (min-width: 992px) {
+    .footer-menu li {
+        flex-basis: calc(100% / 3); /* 3 columns for large screens */
+    }
+}
+
 .footer-menu li:hover {
     text-decoration: underline;
     background-color: #ccc;
